# googer

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yml
googer/: __init__.py  cli.py  config.py  googer.py  results.py
googer_python_library/: debug_chrome.html  debug_google.html  debug_gsa.html  debug_html.py  debug_parse.py  debug_selectors.py  debug_selectors2.py  debug_site.py  test_comprehensive.py  test_googer.py
src/: config.rs  http_client.rs  utils.rs
src/engines/: base.rs
tests/: test_googer.py
