[package]
name = "googer"
version = "0.2.6"
edition = "2021"
description = "A powerful, type-safe Google Search library for Python — powered by Rust."
license = "Apache-2.0"

[lib]
name = "googer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
ureq = { version = "2", features = ["cookies", "socks-proxy"] }
scraper = "0.21"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
html-escape = "0.2"
unicode-normalization = "0.1"
thiserror = "2"
log = "0.4"
pyo3-log = "0.12"
