[package]
name = "googer"
version = "0.2.8"
edition = "2021"
description = "A powerful, type-safe Google Search library for Python — powered by Rust."
license = "Apache-2.0"

[lib]
name = "googer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
ureq = { version = "2", default-features = false, features = ["cookies", "socks-proxy", "native-tls", "gzip"] }
scraper = "0.21"
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
html-escape = "0.2"
unicode-normalization = "0.1"
thiserror = "2"
log = "0.4"
pyo3-log = "0.12"

# Vendor OpenSSL on Linux to avoid version mismatches in manylinux containers
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
