[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "googer"
description = "A powerful, type-safe Google Search library for Python."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["python", "google", "search", "web-scraping", "search-engine"]
authors = [
    {name = "googer contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.8",
    "primp>=1.1.0",
    "lxml>=4.9.4",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/googer/googer"
"Bug Tracker" = "https://github.com/googer/googer/issues"

[project.scripts]
googer = "googer.cli:safe_entry_point"

[tool.setuptools.dynamic]
version = {attr = "googer.__version__"}  # reads __version__ string directly, no heavy imports

[tool.setuptools.packages.find]
include = ["googer*"]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",

    # type stubs
    "lxml-stubs",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    # Core rules
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort

    # Enhanced rules
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EM",   # flake8-errmsg
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "PL",   # Pylint
    "RUF",  # ruff-specific rules
    "D",    # pydocstyle
]
ignore = [
    "D107",     # Missing docstring in `__init__`
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "SLF001",   # Private member accessed
    "S101",     # assert used
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["build/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
