[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "googer"
version = "0.2.4"
description = "A powerful, type-safe Google Search library for Python — powered by Rust."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["python", "google", "search", "web-scraping", "search-engine", "rust"]
authors = [
    {name = "googer contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/googer/googer"
"Bug Tracker" = "https://github.com/googer/googer/issues"

[project.scripts]
googer = "googer.cli:safe_entry_point"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "googer._core"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "D107",     # Missing docstring in `__init__`
    "D203",     # incorrect-blank-line-before-class
    "D213",     # multi-line-summary-second-line
    "N818",     # Exception name should end with Error (our API uses "Exception")
    "PLR0913",  # Too many arguments to function call
    "PLR2004",  # Magic value used in comparison
    "RUF022",   # __all__ not sorted (we group by category)
    "S101",     # assert used
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["build/", "target/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
